update future panels

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -1,4 +1,4 @@
-<div class="breadcrumbs breadcrumbs--overflow">
+<div class="breadcrumbs breadcrumbs--overflow mx-4">
   {% for item in site.data.breadcrumbs.items %}
     <div class="breadcrumbs__item JS_breadcrumbs__item">
 
@@ -11,7 +11,7 @@
       </div>
 
       <div class="inline">
-        <a href="#" class="link">{{item.name}}</a>
+        <a href="#" class="link truncate">{{item.name}}</a>
       </div>
 
       <div class="breadcrumbs__seperator">/</div>
