--- a/_includes/blocks/item-main.html
+++ b/_includes/blocks/item-main.html
@@ -1,34 +1,38 @@
-    <header class="item-main__header">
-        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.
-        </span>
-        <h3>Set-up request</h3>
-        <div class="item-main__headerActions">
-            <ul>
-                <li><a href="#" class="btn btn--danger">Reject</a></li>
-                <li><a href="#" class="btn btn--success">Create</a></li>
-            </ul>
-        </div>
+    <header class="header header--item">
+      <div class="header__title">
+        <h3 class="truncate">Set-up request</h3>
+      </div>
+
+      <div class="header__actions">
+          <button class="btn btn--drop">Reject</button>
+          <button class="btn btn--go">Create</button>
+      </div>
     </header>
 
+
+
+
+
+
     <div class="tabs">
-    <div class="tabs-nav">
-      <div class="tabs-nav__slide tabs-nav__slide--left">
-        <span class="tabs-nav__slideShadow"></span>
-        <span class="tabs-nav__slideArrow">←</span>
-        <span class="tabs-nav__slideCounter">1</span>
-      </div>
-      <ul>
-        <span class="tabs-nav__linkBar"></span>
-        <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">General</a></li>
-        <li><a href="#" class="tabs-nav__link" tabindex="2">Permit Parameters</a></li>
-        <li><a href="#" class="tabs-nav__link" tabindex="3">Special instructions</a></li>
-      </ul>
-      <div class="tabs-nav__slide tabs-nav__slide--right">
-        <span class="tabs-nav__slideShadow"></span>
-        <span class="tabs-nav__slideArrow">→</span>
-        <span class="tabs-nav__slideCounter">9</span>
-      </div>
-    </div><!-- /.tabs-nav -->
+      <div class="tabs-nav">
+        <div class="tabs-nav__slide tabs-nav__slide--left">
+          <span class="tabs-nav__slideShadow"></span>
+          <span class="tabs-nav__slideArrow">←</span>
+          <span class="tabs-nav__slideCounter">1</span>
+        </div>
+        <ul>
+          <span class="tabs-nav__linkBar"></span>
+          <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">General</a></li>
+          <li><a href="#" class="tabs-nav__link" tabindex="2">Permit Parameters</a></li>
+          <li><a href="#" class="tabs-nav__link" tabindex="3">Special instructions</a></li>
+        </ul>
+        <div class="tabs-nav__slide tabs-nav__slide--right">
+          <span class="tabs-nav__slideShadow"></span>
+          <span class="tabs-nav__slideArrow">→</span>
+          <span class="tabs-nav__slideCounter">9</span>
+        </div>
+      </div><!-- /.tabs-nav -->
 
     <div class="tabs-panels">
         <div class="tabs-panels__panel" tabindex="1">
