--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,11 +1,11 @@
 <header class="header header--item">
-  <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle">
+  <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle h2">
   <div class="header__title">
     <div class="header__type header__type--bug">
-      <span class="header__label">Bug</span>
+      <span class="header__label h6">Bug</span>
       <span class="header__id">391441</span>
     </div>
-    <h2>Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
+    <h2 class="truncate">Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
   </div>
   <div class="header__actions">
     <div class="action disabled"></div>
@@ -27,13 +27,13 @@
 
 <header class="header header--section">
   <div class="header__title">
-    <h2>Description</h2>
+    <h3 class="truncate">Description</h3>
   </div>
 </header>
 
 <header class="header header--section">
   <div class="header__title">
-    <h2>Description</h2>
+    <h3 class="truncate">Description</h3>
   </div>
 
   <div class="header__actions">
@@ -420,7 +420,7 @@
 
     <ul class="itemBox__row itemBox__row--tfoot">
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
+        <div class="itemBox__cellInner text-xs">All <span>423</span> items loaded</div>
       </li>
     </ul>
   </div><!-- /.itemBox -->
@@ -588,7 +588,7 @@
 
   <ul class="itemBox__row itemBox__row--tfoot">
     <li class="itemBox__cell">
-      <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
+      <div class="itemBox__cellInner text-xs">All <span>423</span> items loaded</div>
     </li>
   </ul>
 </div><!-- /.itemBox -->
