--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -12,7 +12,7 @@
 
     </div>
   </li>
-  <li class="itemBox__cell align-center">
+  <li class="itemBox__cell text-center">
     <div class="itemBox__cellInner">
 
       <div class="selector">
@@ -25,7 +25,7 @@
 
     </div>
   </li>
-  <li class="itemBox__cell align-right">
+  <li class="itemBox__cell text-right">
     <div class="itemBox__cellInner">
 
       <div class="selector selector--expanded">
