--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -17,7 +17,7 @@
           <div class="itemBox__action"> Selected</div>
         </div>
       </li>
-      <li class="itemBox__cell align-right">
+      <li class="itemBox__cell text-right">
         <div class="itemBox__cellInner">
           {% include javascript/and-or-selector.html %}
         </div>
@@ -37,7 +37,7 @@
               <div class="itemBox__action"> Include</div>
             </div>
           </li>
-          <li class="itemBox__cell align-right">
+          <li class="itemBox__cell text-right">
             <div class="itemBox__cellInner">
               {% include javascript/and-or-selector.html %}
             </div>
@@ -105,7 +105,7 @@
               <div class="itemBox__action"> Exclude</div>
             </div>
           </li>
-          <li class="itemBox__cell align-right">
+          <li class="itemBox__cell text-right">
             <div class="itemBox__cellInner">
               {% include javascript/and-or-selector.html %}
             </div>
