--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -19,7 +19,7 @@
           <div class="itemBox__action"> Selected</div>
         </div>
       </li>
-      <li class="itemBox__cell align-right">
+      <li class="itemBox__cell text-right">
         <div class="itemBox__cellInner">
           {% include javascript/and-or-selector.html %}
         </div>
@@ -38,7 +38,7 @@
             <div class="itemBox__action"> Include</div>
           </div>
         </li>
-        <li class="itemBox__cell align-right">
+        <li class="itemBox__cell text-right">
           <div class="itemBox__cellInner">
             {% include javascript/and-or-selector.html %}
           </div>
@@ -115,7 +115,7 @@
             <div class="itemBox__action"> Exclude</div>
           </div>
         </li>
-        <li class="itemBox__cell align-right">
+        <li class="itemBox__cell text-right">
           <div class="itemBox__cellInner">
             {% include javascript/and-or-selector.html %}
           </div>
