--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -17,7 +17,7 @@
           <div class="itemBox__action"> Selected</div>
         </div>
       </li>
-      <li class="itemBox__cell align-right">
+      <li class="itemBox__cell text-right">
         <div class="itemBox__cellInner">
           {% include javascript/and-or-selector.html %}
         </div>
@@ -36,7 +36,7 @@
               <div class="itemBox__action"> Include</div>
             </div>
           </li>
-          <li class="itemBox__cell align-right">
+          <li class="itemBox__cell text-right">
             <div class="itemBox__cellInner">
               {% include javascript/and-or-selector.html %}
             </div>
