--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,9 +1,9 @@
-<div class="row">
-  <div class="col col-6 align-left">
+<div class="flex">
+  <div class="sm:w-1/2">
     <a href="#" class="action-icon JS_toggle-app-navigator"></a>
     <a href="/" class="action-icon"></a>
   </div>
-  <div class="col col-6 align-right">
+  <div class="sm:w-1/2 text-right">
     <a href="#" class="action-icon JS_toggle-semsearch"></a>
     <a href="#" class="action-icon JS_toggle-user-menu"></a>
   </div>
