--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,19 +1,15 @@
 <header class="header header--item">
-  <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle">
+  <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle h2">
   <div class="header__title">
     <div class="header__type header__type--bug">
-      <span class="header__label">Bug</span>
+      <span class="header__label h6">Bug</span>
       <span class="header__id">391441</span>
     </div>
-    <h2>PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
+    <h2 class="truncate">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
   </div>
   <div class="header__actions">
     <div class="action disabled"></div>
-    <div class="action ">
-
-      <sup></sup>
-
-    </div>
+    <div class="action"><sup></sup></div>
     <div class="action readonly">
 
       <div class="selector selector--expanded">
@@ -28,27 +24,21 @@
     <div class="action readonly">
 
       <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
+        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1">
           <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"></div>
+            <div class="selector__blockPart selector__blockPart--prefix"><sup>2/5</sup></div>
           </div>
         </div>
         <div class="selector__itemSeperator"></div>
-        <div class="selector__item  JS_selectorItem JS_toggle-comments">
+        <div class="selector__item  JS_selectorItem JS_panels-state-2">
           <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
+            <div class="selector__blockPart selector__blockPart--prefix"></div>
           </div>
         </div>
         <div class="selector__itemSeperator"></div>
-        <div class="selector__item JS_selectorItem">
+        <div class="selector__item JS_selectorItem JS_panels-state-3">
           <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"></div>
-          </div>
-        </div>
-        <div class="selector__itemSeperator"></div>
-        <div class="selector__item JS_selectorItem">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"></div>
+            <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
           </div>
         </div>
       </div>
