--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -4,7 +4,7 @@
       <div class="itemBox__action"> Include</div>
     </div>
   </li>
-  <li class="itemBox__cell align-right">
+  <li class="itemBox__cell text-right">
     <div class="itemBox__cellInner">
       {% include javascript/and-or-selector.html %}
     </div>
