--- a/sass/app.scss
+++ b/sass/app.scss
@@ -15,10 +15,14 @@
 }
 
 :root {
-  --color-primary: #AC840B;
-  --color-secondary: #E61616;
+  --color-gold: #AC840B;
   --color-blue: #00BFFF;
-  --color-grey: #E5E4E2;
+  --color-red: #E61616;
+  --color-platinum: #E5E4E2;
+  --color-grey-lightest: #F2F2F2;
+  --color-grey-light: #D7D7D7;
+  --color-grey: #C1C1C1;
+  --color-grey-dark: #B2B2B2;
 }
 
 body {
@@ -31,7 +35,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-
   background-color: #4692C3;
 
   &.fixed {
