--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -4,8 +4,7 @@
 .breadcrumbs {
   position: relative;
   padding: 5px 10px;
-  margin: 0 20px;
-  background: rgb(193,193,193);
+  background-color: var(--color-grey);
   white-space: nowrap;
   overflow: hidden;
 
@@ -35,7 +34,7 @@
         z-index: 1;
         opacity: 1;
         padding: 5px 10px;
-        background-color: #C1C1C1;
+        background-color: var(--color-grey);
 
         &::after {
           top: 12px;
@@ -88,9 +87,6 @@
     .link {
       vertical-align: middle;
       max-width: 300px;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
     }
 	}
 
