--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -67,7 +67,7 @@
       outline: 0;
       display: inline-block;
       padding: 15px 0;
-      color: var(--color-primary);
+      color: var(--color-gold);
       text-decoration: none;
       text-transform: uppercase;
       font-size: 14px;
