--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -7,19 +7,18 @@
 @import "app.css";
 
 // Plugins
+@import "plugins/panels.css";
 @import "plugins/sticky.css";
 
 // Blocks
 @import "blocks/app-navigator.css";
 @import "blocks/user-menu.css";
 @import "blocks/app-header.css";
-@import "blocks/item-body.css";
-@import "blocks/item-progress.css";
-@import "blocks/item-comments.css";
+
 @import "blocks/applicable-slider.css";
 
 // Components
-@import "components/header.css";
+@import "components/headers.css";
 @import "components/field.css";
 @import "components/selector.css";
 @import "components/itembox.css";
@@ -28,6 +27,8 @@
 @import "components/note.css";
 @import "components/multiSelector.css";
 @import "components/buttons.css";
+@import "components/progress.css";
+@import "components/comments.css";
 
 // temporary, because of js
 @import "temporary.css";
