--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,69 +1,241 @@
-<header class="header header--item">
-  <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle h2">
-  <div class="header__title">
-    <div class="header__type header__type--bug">
-      <span class="header__label h6">Bug</span>
-      <span class="header__id">391441</span>
-    </div>
-    <h2 class="truncate">Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
-  </div>
-  <div class="header__actions">
-    <div class="action disabled"></div>
-    <div class="action readonly">
+<section style="min-height: 100vh;">
 
-      <div class="selector selector--expanded">
-        <div class="selector__item JS_selectorItem--active selector__item--selected">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
+  <header class="header header--item animate--loading">
+    <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle h2">
+    <div class="header__title">
+      <div class="header__type header__type--bug">
+        <span class="header__label h6">Bug</span>
+        <span class="header__id">391441</span>
+      </div>
+      <h2 class="truncate">Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
+    </div>
+    <div class="header__actions">
+      <div class="action disabled"></div>
+      <div class="action readonly">
+
+        <div class="selector selector--expanded">
+          <div class="selector__item JS_selectorItem--active selector__item--selected">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
+            </div>
           </div>
         </div>
+
       </div>
-
+      <div class="action"></div>
+      <div class="action"><sup>0/3</sup></div>
     </div>
-    <div class="action"></div>
-    <div class="action"><sup>0/3</sup></div>
+  </header>
+
+  <header class="header header--section">
+    <div class="header__title">
+      <h3 class="truncate">Description</h3>
+    </div>
+  </header>
+
+  <header class="header header--section">
+    <div class="header__title">
+      <h3 class="truncate">Description</h3>
+    </div>
+
+    <div class="header__actions">
+      <div class="action"></div>
+      <div class="action"></div>
+    </div>
+  </header>
+
+  <header class="header header--table">
+    <div class="header__title">
+      <h2>This sprint<sup>5</sup></h2>
+    </div>
+    <div class="header__actions">
+      <div class="action disabled"></div>
+      <div class="action">Print</div>
+      <div class="action"></div>
+      <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+    </div>
+  </header>
+
+  <div class="itemBox">
+    <ul class="itemBox__row itemBox__row--thead">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action"></div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">Nr</div>
+      </li>
+      <li class="itemBox__cell flex-grow-2 animate--loading">
+        <div class="itemBox__cellInner">Title</div>
+      </li>
+      <li class="itemBox__cell flex-grow-2">
+        <div class="itemBox__cellInner">Assigned to</div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">Reported by customer</div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
+        <div class="itemBox__cellInner"></div>
+      </li>
+      <li class="itemBox__cell">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__value">
+            <div class="selector selector--expanded">
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--field">395415</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">Bulk update speed regressed in 282.0</div>
+      </li>
+      <li class="itemBox__cell flex-grow-2">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
+              <div class="selector__block">
+                <span class="selector__blockPart selector__blockPart--field">Vasya Aksyonov</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect selector--expanded JS_selector">
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item animate--loading">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
+        <div class="itemBox__cellInner"></div>
+      </li>
+      <li class="itemBox__cell">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--expanded">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">35825</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">Write spec for semantic search</div>
+      </li>
+      <li class="itemBox__cell flex-grow-2">
+        <input type="text" class="itemBox__input">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
+              <div class="selector__block">
+                <span class="selector__blockPart selector__blockPart--field">Vincent Goosens</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect selector--expanded JS_selector">
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action"></div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner"></div>
+      </li>
+      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
+        <div class="itemBox__cellInner">Integrated Release Management</div>
+      </li>
+      <li class="itemBox__cell flex-grow-2">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect animate--loading">
+            <div class="selector__item JS_selectorItem--active selector__item--selected">
+              <div class="selector__block">
+                <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+          <div class="selector selector--singleselect selector--expanded JS_selector">
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--tfoot">
+      <li class="itemBox__cell">
+      </li>
+    </ul>
   </div>
-</header>
 
-<header class="header header--section">
-  <div class="header__title">
-    <h3 class="truncate">Description</h3>
-  </div>
-</header>
-
-<header class="header header--section">
-  <div class="header__title">
-    <h3 class="truncate">Description</h3>
-  </div>
-
-  <div class="header__actions">
-    <div class="action"></div>
-    <div class="action"></div>
-  </div>
-</header>
-
-
-
-
-
-<br><br><br><br>
+</section>
 
 
 
 
 
 
-<header class="header header--table">
-  <div class="header__title">
-    <h2>This sprint<sup>5</sup></h2>
-  </div>
-  <div class="header__actions">
-    <div class="action disabled"></div>
-    <div class="action">Print</div>
-    <div class="action"></div>
-    <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
-  </div>
-</header>
 
 <div class="itemBox">
   <ul class="itemBox__row itemBox__row--thead">
