--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -75,6 +75,7 @@
     white-space: nowrap;
     overflow: hidden;
     padding: 5px;
+    background-color: transparent;
     transition: all .3s ease-in-out;
 
     &::after {
@@ -91,12 +92,14 @@
     }
 
     input {
+      outline: 0;
       width: 100%;
       height: 100%;
       position: absolute;
       top: 0;
       left: 0;
       padding: 5px;
+      background-color: transparent;
     }
   }
 
