overlay with type colors

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -562,7 +562,7 @@
       <li class="itemBox__cell flex-grow-2">
         <div class="itemBox__cellInner">
           <div class="selector selector--singleselect">
-            <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error"></div>
+            <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup JS_has-popup--error" data-popid="#multiSelector-error"></div>
             <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
