--- a/sass/app.scss
+++ b/sass/app.scss
@@ -62,7 +62,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.15);
     z-index: 9000;
     opacity: 0;
     pointer-events: none;
@@ -75,6 +75,19 @@ body {
     transition: all .3s ease-in-out;
     max-width: 100vw;
     width: 100%;
+  }
+}
+
+.state-overlay {
+  &-tooltip {
+    .app__overlay {
+      background-color: rgba(210, 229, 255, 0.4);
+    }
+  }
+  &-error {
+    .app__overlay {
+      background-color: rgba(255, 148, 148, 0.4);
+    }
   }
 }
 
