fix header margin

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -1,10 +1,10 @@
-<div class="item item--bug">
+<div class="item item--bug mx-4">
   <div class="sticky-header">
     {% include blocks/item-header.html %}
   </div>
 </div>
 
-<div id="ctl00_pagebody_container" class="pagebody-container">
+<div id="ctl00_pagebody_container" class="mx-4">
     <div class="pagebody">
         <div id="itemdetailpage" class="item-detail ">
             <div id="ctl00_PageContentPlaceHolder_ctl00_ItemDetailContent">
