Semsearch: position fix

--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,4 +1,4 @@
-<div class="multiSelector pin-r w-half-screen JS_semsearch" style="margin: 10px 60px 0 0;">
+<div class="multiSelector pin-r w-half-screen JS_semsearch">
 
   <div class="itemBox">
     <ul class="itemBox__row">
