--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -119,7 +119,10 @@
                     </div><!-- /.tab-content -->
 
                     <div class="tab-content" tab-name="Bugs" style="display: none;">
-                      {% include blocks/itembox.html %}
+
+                      <div class="p-4">
+                        {% include blocks/itembox.html %}
+                      </div>
                     </div><!-- /.tab-content -->
                   </div>
 
