--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -5,6 +5,7 @@
   position: relative;
   background-color: #FFF;
   padding: 15px;
+  border-radius: 5px 5px 0 0;
 
   &::before {
     content: '';
