--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -107,11 +107,11 @@
 
                     <div class="tab-content" tab-name="solution" style="display: none;">
 
-                      <div class="flex text-sm">
-                        <div class="w-1/2 pl-2 pr-3">
+                      <div class="flex flex-col sm:flex-row text-sm">
+                        <div class="w-full sm:w-1/2 sm:pl-2 sm:pr-3">
                           {% include blocks/old-pmx-comments.html %}
                         </div>
-                        <div class="w-1/2 pl-3 pr-2">
+                        <div class="w-full sm:w-1/2 sm:pl-3 sm:pr-2">
                           {% include blocks/old-pmx-attachments.html %}
                         </div>
                       </div>
