--- a/sass/app.scss
+++ b/sass/app.scss
@@ -40,6 +40,7 @@ body {
   &.fixed {
     overflow-y: hidden;
   }
+  &.page-Drag,
   &.page-Selectors {
     background-color: #FFF;
     margin: 50px 5%;
