--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -80,6 +80,7 @@
     right: 0;
     max-width: 50%;
     height: 100%;
+    padding: 0 10px 0 0;
     background-color: #FFF;
     z-index: 2;
     display: flex;
