Speedier animation, order swapped, checkes for non-existing selected block

--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -1,5 +1,5 @@
 <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
-  <li class="itemBox__cell itemBox__cell--action">
+  <li class="itemBox__cell itemBox__cell--action JS_toggle">
     <div class="itemBox__cellInner">
       <div class="itemBox__action"> Exclude</div>
     </div>
@@ -9,9 +9,9 @@
       {% include javascript/and-or-selector.html %}
     </div>
   </li>
-  <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+  <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
     <div class="itemBox__cellInner">
-      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></i>
+      <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
     </div>
   </li>
 </ul>
