Multiselect: fixed counter

--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -17,7 +17,7 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action"> Selected</div>
+          <div class="itemBox__action JS_selectedText"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
