--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -1,7 +1,7 @@
 <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
     <li class="itemBox__cell itemBox__cell--action JS_toggle">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action"> Selected</div>
+        <div class="itemBox__action JS_selectedText"> Selected</div>
       </div>
     </li>
     ${andOrSelector}
