--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -16,7 +16,7 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action"> Selected</div>
+          <div class="itemBox__action JS_selectedText"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell text-right">
