update field to be able to put actions inline

--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,11 +1,11 @@
 <div class="flex">
   <div class="sm:w-1/2">
-    <a href="#" class="action-icon JS_toggle-app-navigator"></a>
-    <a href="/" class="action-icon"></a>
+    <a href="#" class="block-action text-white JS_toggle-app-navigator"></a>
+    <a href="/" class="block-action text-white"></a>
   </div>
   <div class="sm:w-1/2 text-right">
-    <a href="#" class="action-icon JS_toggle-semsearch"></a>
-    <a href="#" class="action-icon JS_toggle-user-menu"></a>
+    <a href="#" class="block-action text-white JS_toggle-semsearch"></a>
+    <a href="#" class="block-action text-white JS_toggle-user-menu"></a>
   </div>
 </div>
 
