--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -10,8 +10,8 @@
       <h2 class="truncate">Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
     </div>
     <div class="header__actions">
-      <div class="action disabled"></div>
-      <div class="action readonly">
+      <div class="block-action disabled"></div>
+      <div class="block-action readonly">
 
         <div class="selector selector--expanded">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -22,8 +22,8 @@
         </div>
 
       </div>
-      <div class="action"></div>
-      <div class="action"><sup>0/3</sup></div>
+      <div class="block-action"></div>
+      <div class="block-action"><sup>0/3</sup></div>
     </div>
   </header>
 
@@ -39,8 +39,8 @@
     </div>
 
     <div class="header__actions">
-      <div class="action"></div>
-      <div class="action"></div>
+      <div class="block-action"></div>
+      <div class="block-action"></div>
     </div>
   </header>
 
@@ -49,10 +49,10 @@
       <h2>This sprint<sup>5</sup></h2>
     </div>
     <div class="header__actions">
-      <div class="action disabled"></div>
-      <div class="action">Print</div>
-      <div class="action"></div>
-      <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+      <div class="block-action disabled"></div>
+      <div class="block-action">Print</div>
+      <div class="block-action"></div>
+      <div class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
     </div>
   </header>
 
@@ -415,10 +415,10 @@
         <h2>Integrated Release Management</h2>
       </div>
       <div class="header__actions">
-        <div class="action disabled"></div>
-        <div class="action">Print</div>
-        <div class="action"></div>
-        <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+        <div class="block-action disabled"></div>
+        <div class="block-action">Print</div>
+        <div class="block-action"></div>
+        <div class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
       </div>
     </header>
 
