--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -8,9 +8,9 @@
     <h2 class="truncate">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
   </div>
   <div class="header__actions">
-    <div class="action disabled"></div>
-    <div class="action"><sup></sup></div>
-    <div class="action readonly">
+    <div class="block-action disabled"></div>
+    <div class="block-action"><sup></sup></div>
+    <div class="block-action readonly">
 
       <div class="selector selector--expanded">
         <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -21,7 +21,7 @@
       </div>
 
     </div>
-    <div class="action readonly">
+    <div class="block-action readonly">
 
       <div class="selector selector--singleselect selector--expanded JS_selector">
         <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1">
