--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -2,7 +2,7 @@
 ---
 
 .btns {
-  margin: 30px 10px;
+  margin: 30px 0;
 }
 
 .btn {
@@ -13,7 +13,7 @@
   cursor: pointer;
   position: relative;
   display: inline-block;
-  margin: 0 5px;
+  margin: 5px;
   padding: 5px 18px;
   border-radius: 15px;
   text-align: center;
