--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.3/tailwind.min.css" />
+
 <!-- CDN OR USED PLUGINS NOT MADE BY US -->
 <!-- cdn for animations -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
