remove outline on focus for buttons

--- a/_includes/blocks/old-pmx-tabline.html
+++ b/_includes/blocks/old-pmx-tabline.html
@@ -1,4 +1,4 @@
-<div class="tabline" id="tabline">
+<div class="tabline px-4" id="tabline">
     <div class="tabs">
         <div class="tab-scroller">
             <ul class="tabs">
