--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -16,7 +16,7 @@
             </div>
           </div>
         </div>
-        <div class="inline">{{item  | capitalize}}</div>
+        <div class="inline align-middle pl-1">{{item  | capitalize}}</div>
       </div>
     </li>
   </ul>
