--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -79,6 +79,7 @@
     background-color: transparent;
     transition: all .3s ease-in-out;
     cursor: text;
+    overflow: hidden;
 
     &::after {
       content: '';
@@ -87,10 +88,9 @@
       right: 0;
       width: 50px;
       height: 100%;
-      color: rgba(255, 255, 255, 0.95);
-      box-shadow: inset -10px 0 20px 0;
       pointer-events: none;
-      z-index: 2;
+      z-index: 5;
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
     }
 
     .error {
