--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -2,8 +2,11 @@
 ---
 
 .itemBox {
-  padding-bottom: 10px;
   font-size: 16px;
+
+  + .itemBox {
+    padding-top: 10px;
+  }
 
   .itemBox {
     padding: 5px 0 5px 15px;
@@ -17,7 +20,7 @@
     line-height: 30px;
 
     &--thead {
-      background: #d9d9d9;
+      background: #D9D9D9;
       color: #808080;
       height: 50px;
       line-height: 40px;
@@ -42,7 +45,7 @@
             width: 100%;
             height: 0;
             display: block;
-            background-color: #A9A9A9;
+            background-color: #929292;
             z-index: 2;
             pointer-events: none;
             opacity: 0;
@@ -78,7 +81,7 @@
 
             &::before {
               background: #B2B2B2;
-              background: linear-gradient(to right, var(--color-grey-dark) 0%, var(--color-blue) 20%, var(--color-blue) 50%, var(--color-blue) 80%, var(--color-grey-dark) 100%);
+              background: linear-gradient(to right, #929292 0%, var(--color-blue) 20%, var(--color-blue) 50%, var(--color-blue) 80%, #929292 100%);
             }
           }
         }
@@ -204,8 +207,9 @@
     padding: 5px 10px;
 
     &:focus + .itemBox__cellInner {
-      box-shadow: 0 0 100px rgba(0, 0, 0, .2);
-      z-index: 1;
+      overflow: visible;
+      box-shadow: 0 0 100px rgba(0, 0, 0, 0.75);
+      z-index: 9;
     }
   }
 
@@ -218,6 +222,10 @@
     padding: 5px 10px;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    input {
+      width: 100%;
+    }
 
     .selector {
       vertical-align: top;
