--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -26,9 +26,9 @@
             <div class="selector selector--expanded">
               <div class="selector__item JS_selectorItem--active selector__item--selected">
                 <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--label">{{item.label}}</div>
+                  <div class="selector__blockPart selector__blockPart--label" title="{{item.label}}">{{item.label}}</div>
                   <div class="selector__blockSeperator"></div>
-                  <div class="selector__blockPart selector__blockPart--field">{{item.name}}</div>
+                  <div class="selector__blockPart selector__blockPart--field" title="{{item.name}}">{{item.name}}</div>
                 </div>
               </div>
             </div>
