--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -122,6 +122,7 @@
       }
 
       &--label  {
+        max-width: 200px;
         font-size: 12px;
         font-weight: 600;
         letter-spacing: 1px;
