--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -31,7 +31,7 @@
               <div class="selector selector--expanded">
                 <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text" title="{{item}}">{{item}}</div>
                   </div>
                 </div>
               </div>
