--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,7 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.3/tailwind.min.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/framework.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.3/tailwind.min.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-extend.css">
+
 
 <!-- CDN OR USED PLUGINS NOT MADE BY US -->
 <!-- cdn for animations -->
