--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -7,38 +7,6 @@
   padding: 12px 0 0;
   transition: all .3s ease-in-out;
 
-  &--tooltip {
-    .field {
-      &__label {
-        cursor: pointer;
-      }
-    }
-  }
-
-  &--error {
-    .field {
-      &__value {
-        .error {
-          width: 26px;
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  &--focus {
-    .field__label {
-      top: -1px;
-      font-size: 12px;
-      font-weight: 600;
-      font-style: normal;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      color: #808080;
-      opacity: 1;
-    }
-  }
-
   &__label {
     position: absolute;
     top: -1px;
@@ -53,6 +21,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #808080;
+    z-index: 2;
 
     &--placeholder {
       top: 16px;
@@ -96,6 +65,38 @@
 
     .selector {
       vertical-align: top;
+    }
+  }
+
+  &--tooltip {
+    .field {
+      &__label {
+        cursor: pointer;
+      }
+    }
+  }
+
+  &--error {
+    .field {
+      &__value {
+        .error {
+          width: 26px;
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  &--focus {
+    .field__label {
+      top: -1px;
+      font-size: 12px;
+      font-weight: 600;
+      font-style: normal;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: #808080;
+      opacity: 1;
     }
   }
 }
