--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -18,16 +18,17 @@
   font-size: 16px;
   background-color: var(--color-platinum);
   color: #000;
-  box-shadow: 0 2px 0 #CCC;
+  box-shadow: 0 2px 0 #BFBFBF;
+  backface-visibility: hidden;
 
   &:hover {
     transform: translatey(1px);
-    box-shadow: 0 1px 0 #CCC;
+    box-shadow: 0 1px 0 #8E8E8E;
   }
 
   &--go {
     background-color: var(--color-blue);
-    box-shadow: 0 2px 0 #055074;
+    box-shadow: 0 2px 0 #0574A9;
 
     &:hover {
       box-shadow: 0 1px 0 #055074;
