--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -22,6 +22,7 @@
     text-transform: uppercase;
     color: #808080;
     z-index: 2;
+    pointer-events: none;
 
     &--placeholder {
       top: 16px;
@@ -97,6 +98,7 @@
       text-transform: uppercase;
       color: #808080;
       opacity: 1;
+
     }
   }
 }
